--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "testfilamentexpo",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -9,13 +9,37 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.14",
+    "@10play/tentap-editor": "0.5.8",
+    "@gorhom/bottom-sheet": "^4",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/slider": "4.5.2",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@tamagui/animations-moti": "^1.100.6",
+    "@types/react": "~18.2.79",
+    "expo": "51.0.14",
+    "expo-image": "~1.12.9",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.2",
+    "react-native-awesome-gallery": "^0.3.9",
+    "react-native-collapsible": "^1.6.1",
+    "react-native-drawer-layout": "^3.3.0",
+    "react-native-gesture-handler": "~2.16.2",
+    "react-native-ios-modal": "^0.1.8",
+    "react-native-pager-view": "6.3.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-webview": "13.10.2",
+    "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "typescript": "5.3.3"
   },
   "private": true
 }
